# digikuery

./: Makefile  README.md  digikuery.py  pyproject.toml
src/: digikuery.py
